update footer portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -332,7 +332,12 @@
           <div class="email-input">
             <p class="email-input-text">ZAPISZ SIĘ DO NEWSLETTERA</p>
             <form name="signup-form">
-              <input type="email" name="email" placeholder="E-mail" />
+              <input
+                class="subscribe"
+                type="email"
+                name="signupemail"
+                placeholder="E-mail"
+              />
               <button class="button-footer" type="submit">
                 Zapisz się
                 <svg class="icon-send" width="24" height="24">
