--- a/index.html
+++ b/index.html
@@ -19,6 +19,73 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <div class="modal is-hidden" data-modal>
+      <div class="window">
+        <button type="button" class="window-end" data-modal-close>
+          <svg width="11" height="11">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <div>
+          <b class="form-caption">Zostaw swoje dane w formularzu poniżej</b>
+          <form class="sign-up-form" name="sign-up-name">
+            <div class="form-field">
+              <label class="form-label"
+                >Imie
+                <svg class="form-icon" width="12" height="12">
+                  <use href="./images/icons.svg#icon-person-send"></use>
+                </svg>
+                <input class="form-input" type="text" name="username"
+              /></label>
+            </div>
+            <div class="form-field">
+              <label class="form-label"
+                >Telefon<svg class="form-icon" width="13" height="13">
+                  <use href="./images/icons.svg#icon-phone-send"></use>
+                </svg>
+                <input class="form-input" type="tel" name="userphone"
+              /></label>
+            </div>
+            <div class="form-field">
+              <label class="form-label"
+                >Email<svg class="form-icon" width="15" height="12">
+                  <use href="./images/icons.svg#icon-email-send"></use>
+                </svg>
+                <input class="form-input" type="email" name="useremail"
+              /></label>
+            </div>
+            <div class="form-field">
+              <label class="form-label"
+                >Komentarz<textarea
+                  class="form-input comment"
+                  type="text"
+                  placeholder="Wprowadź tekst"
+                  name="usercomment"
+                ></textarea>
+              </label>
+            </div>
+            <div class="form-field-agreement">
+              <input
+                class="check-input"
+                type="checkbox"
+                id="agreement"
+                name="useragreement"
+                value="true"
+                required
+              />
+              <label class="check-label" for="agreement"
+                >Oświadczam iż akceptuję
+                <span class="statute">Regulamin</span> i
+                <span class="statute">Politykę Prywatności.</span>
+              </label>
+            </div>
+            <div>
+              <button class="button-sign-up" type="submit">Wyślij</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
     <header>
       <section class="main-header">
         <div class="container">
@@ -30,9 +97,7 @@
               <nav>
                 <ul class="main-menu">
                   <li>
-                    <a class="menu-nav is-active" href="./index.html"
-                      >Agencja</a
-                    >
+                    <a class="menu-nav active" href="./index.html">Agencja</a>
                   </li>
                   <li>
                     <a class="menu-nav" href="./portfolio.html">Portfolio</a>
@@ -71,75 +136,6 @@
           <button data-modal-open class="button-hw1" type="button">
             Zamów usługę
           </button>
-          <div class="modal is-hidden" data-modal>
-            <div class="window">
-              <button type="button" class="window-end" data-modal-close>
-                <svg width="11" height="11">
-                  <use href="./images/icons.svg#icon-close"></use>
-                </svg>
-              </button>
-              <div>
-                <b class="form-caption"
-                  >Zostaw swoje dane w formularzu poniżej</b
-                >
-                <form class="sign-up-form" name="sign-up-name">
-                  <div class="form-field">
-                    <label class="form-label"
-                      >Imie
-                      <svg class="form-icon" width="12" height="12">
-                        <use href="./images/icons.svg#icon-person-send"></use>
-                      </svg>
-                      <input class="form-input" type="text" name="username"
-                    /></label>
-                  </div>
-                  <div class="form-field">
-                    <label class="form-label"
-                      >Telefon<svg class="form-icon" width="13" height="13">
-                        <use href="./images/icons.svg#icon-phone-send"></use>
-                      </svg>
-                      <input class="form-input" type="tel" name="userphone"
-                    /></label>
-                  </div>
-                  <div class="form-field">
-                    <label class="form-label"
-                      >Email<svg class="form-icon" width="15" height="12">
-                        <use href="./images/icons.svg#icon-email-send"></use>
-                      </svg>
-                      <input class="form-input" type="email" name="useremail"
-                    /></label>
-                  </div>
-                  <div class="form-field">
-                    <label class="form-label"
-                      >Komentarz<textarea
-                        class="form-input comment"
-                        type="text"
-                        placeholder="Wprowadź tekst"
-                        name="usercomment"
-                      ></textarea>
-                    </label>
-                  </div>
-                  <div class="form-field-agreement">
-                    <input
-                      class="check-input"
-                      type="checkbox"
-                      id="agreement"
-                      name="useragreement"
-                      value="true"
-                      required
-                    />
-                    <label class="check-label" for="agreement"
-                      >Oświadczam iż akceptuję
-                      <span class="statute">Regulamin</span> i
-                      <span class="statute">Politykę Prywatności.</span>
-                    </label>
-                  </div>
-                  <div>
-                    <button class="button-sign-up" type="submit">Wyślij</button>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </header>
