--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                 <ul class="main-menu">
                   <li><a class="menu-nav" href="./index.html">Agencja</a></li>
                   <li>
-                    <a class="menu-nav is-active" href="./portfolio.html"
+                    <a class="menu-nav active" href="./portfolio.html"
                       >Portfolio</a
                     >
                   </li>
