--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
+    <div class="modal is-hidden" data-modal>
+      <div class="backdrop">
         <button type="button" class="window-end" data-modal-close>
           <svg width="11" height="11">
             <use href="./images/icons.svg#icon-close"></use>
