--- a/index.html
+++ b/index.html
@@ -21,119 +21,129 @@
   <body>
     <div class="modal is-hidden" data-modal>
       <div class="backdrop">
-        <button type="button" class="window-end" data-modal-close>
+        <button type="button" class="modal__close-button" data-modal-close>
           <svg width="11" height="11">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <div>
-          <b class="form-caption">Zostaw swoje dane w formularzu poniżej</b>
-          <form class="sign-up-form" name="sign-up-name">
-            <div class="form-field">
-              <label class="form-label"
+        <div class="form">
+          <b class="form__title">Zostaw swoje dane w formularzu poniżej</b>
+          <form class="form__sign-up" name="sign-up-name">
+            <div class="field form__field">
+              <label class="field__label"
                 >Imie
-                <svg class="form-icon" width="12" height="12">
+                <svg class="field__icon" width="12" height="12">
                   <use href="./images/icons.svg#icon-person-send"></use>
                 </svg>
-                <input class="form-input" type="text" name="username"
+                <input class="field__input" type="text" name="username"
               /></label>
             </div>
-            <div class="form-field">
-              <label class="form-label"
-                >Telefon<svg class="form-icon" width="13" height="13">
+            <div class="field form__field">
+              <label class="field__label"
+                >Telefon<svg class="field__icon" width="13" height="13">
                   <use href="./images/icons.svg#icon-phone-send"></use>
                 </svg>
-                <input class="form-input" type="tel" name="userphone"
+                <input class="field__input" type="tel" name="userphone"
               /></label>
             </div>
-            <div class="form-field">
-              <label class="form-label"
-                >Email<svg class="form-icon" width="15" height="12">
+            <div class="field form__field">
+              <label class="field__label"
+                >Email<svg class="field__icon" width="15" height="12">
                   <use href="./images/icons.svg#icon-email-send"></use>
                 </svg>
-                <input class="form-input" type="email" name="useremail"
+                <input class="field__input" type="email" name="useremail"
               /></label>
             </div>
-            <div class="form-field">
-              <label class="form-label"
+            <div class="field form__field">
+              <label class="field__label"
                 >Komentarz<textarea
-                  class="form-input comment"
+                  class="field__input field__input--comment"
                   type="text"
                   placeholder="Wprowadź tekst"
                   name="usercomment"
                 ></textarea>
               </label>
             </div>
-            <div class="form-field-agreement">
+            <div class="agreement">
               <input
-                class="check-input"
+                class="agreement__field"
                 type="checkbox"
                 id="agreement"
                 name="useragreement"
                 value="true"
                 required
               />
-              <label class="check-label" for="agreement"
+              <label class="agreement__label" for="agreement"
                 >Oświadczam iż akceptuję
-                <span class="statute">Regulamin</span> i
-                <span class="statute">Politykę Prywatności.</span>
+                <span class="agreement__label--statute">Regulamin</span> i
+                <span class="agreement__label--statute"
+                  >Politykę Prywatności.</span
+                >
               </label>
             </div>
             <div>
-              <button class="button-sign-up" type="submit">Wyślij</button>
+              <button class="button agreement__button" type="submit">
+                Wyślij
+              </button>
             </div>
           </form>
         </div>
       </div>
     </div>
     <header>
-      <section class="main-header">
-        <div class="container">
-          <div class="menu">
-            <div class="menu1">
-              <a class="logo" href="./index.html"
-                ><span class="logo-web">Web</span>Studio</a
-              >
-              <nav>
-                <ul class="main-menu">
-                  <li>
-                    <a class="menu-nav active" href="./index.html">Agencja</a>
-                  </li>
-                  <li>
-                    <a class="menu-nav" href="./portfolio.html">Portfolio</a>
-                  </li>
-                  <li class="menu-nav">Kontakt</li>
-                </ul>
-              </nav>
-            </div>
-            <div>
-              <ul class="contact">
-                <li class="icon-contact">
-                  <svg width="25" height="20">
-                    <use href="./images/icons.svg#icon-envelope"></use>
-                  </svg>
-                  <a class="e-mail" href="mailto:info@devstudio.com">
-                    info@devstudio.com</a
+      <div class="container">
+        <section class="main-header">
+          <div class="logo">
+            <a class="logo__link logo__link--header" href="./index.html"
+              ><span class="logo__text">Web</span>Studio</a
+            >
+            <nav class="navigation">
+              <ul class="navigation__list">
+                <li>
+                  <a
+                    class="navigation__link navigation__link--active"
+                    href="./index.html"
+                    >Agencja</a
                   >
                 </li>
-                <li class="icon-contact">
-                  <svg width="25" height="20">
-                    <use href="./images/icons.svg#icon-smartphone"></use>
-                  </svg>
-                  <a class="e-mail" href="tel:+48111111111">+48 111 111 111</a>
+                <li>
+                  <a class="navigation__link" href="./portfolio.html"
+                    >Portfolio</a
+                  >
                 </li>
+                <li class="navigation__link">Kontakt</li>
               </ul>
-            </div>
+            </nav>
           </div>
-        </div>
-      </section>
+          <div>
+            <ul class="contact">
+              <li class="contact__item">
+                <svg width="25" height="20">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
+                <a class="contact__link" href="mailto:info@devstudio.com">
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="contact__item">
+                <svg width="25" height="20">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
+                <a class="contact__link" href="tel:+48111111111"
+                  >+48 111 111 111</a
+                >
+              </li>
+            </ul>
+          </div>
+        </section>
+      </div>
       <div class="motto">
         <div class="container">
           <h1>
             EFEKTYWNE ROZWIĄZANIA<br />
             DLA WASZEGO BIZNESU
           </h1>
-          <button data-modal-open class="button-hw1" type="button">
+          <button data-modal-open class="button button__motto" type="button">
             Zamów usługę
           </button>
         </div>
@@ -404,9 +414,9 @@
       <div class="container">
         <section class="footer-item">
           <div class="footer-logo">
-            <a class="logo" href="./index.html"
-              ><span class="logo-web">Web</span
-              ><span class="logo-studio">Studio</span></a
+            <a class="logo__link" href="./index.html"
+              ><span class="logo__text">Web</span
+              ><span class="logo__link--footer">Studio</span></a
             >
             <address>
               m. Warszawa, Aleje Jerozolimskie 21 <br />
