edit logo-header and logo-footer

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
     </div>
     <header>
       <div class="container">
-        <section class="main-header">
-          <div class="logo">
-            <a class="logo__link logo__link--header" href="./index.html"
-              ><span class="logo__text">Web</span>Studio</a
+        <section class="header">
+          <div class="main-header">
+            <a class="logo logo--header" href="./index.html"
+              ><span class="logo__link-text">Web</span>Studio</a
             >
             <nav class="navigation">
               <ul class="navigation__list">
@@ -412,11 +412,10 @@
     </main>
     <footer>
       <div class="container">
-        <section class="footer-item">
-          <div class="footer-logo">
-            <a class="logo__link" href="./index.html"
-              ><span class="logo__text">Web</span
-              ><span class="logo__link--footer">Studio</span></a
+        <section class="footer">
+          <div class="footer__logo">
+            <a class="logo logo--footer" href="./index.html"
+              ><span class="logo__link-text">Web</span>Studio</a
             >
             <address>
               m. Warszawa, Aleje Jerozolimskie 21 <br />
