--- a/index.html
+++ b/index.html
@@ -150,115 +150,113 @@
       </div>
     </header>
     <main>
-      <div class="container">
-        <section>
-          <ul class="lorem-ipsum">
+      <section class="container">
+        <ul class="strength">
+          <li class="strength__item">
+            <svg class="strength__icon" width="270" height="120">
+              <use href="./images/icons.svg#icon-antenna"></use>
+            </svg>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li class="strength__item">
+            <svg class="strength__icon" width="270" height="120">
+              <use href="./images/icons.svg#icon-clock"></use>
+            </svg>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li class="strength__item">
+            <svg class="strength__icon" width="270" height="120">
+              <use href="./images/icons.svg#icon-diagram"></use>
+            </svg>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li class="strength__item">
+            <svg class="strength__icon" width="270" height="120">
+              <use href="./images/icons.svg#icon-astronaut"></use>
+            </svg>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="direction container">
+        <h2 class="direction__title">Czym się zajmujemy</h2>
+        <ul class="direction__img">
+          <li class="direction__overlay">
+            <img
+              src="images/notebook.jpg"
+              alt="a notebook on the table"
+              width="370"
+              height="294"
+            />
+            <div class="direction__overlay-text">Aplikacje komputerowe</div>
+          </li>
+          <li class="direction__overlay">
+            <img
+              src="images/phone_notebook.jpg"
+              alt="a notebook on the table and a phone in a hand"
+              width="370"
+              height="294"
+            />
+            <div class="direction__overlay-text">Aplikacje mobilne</div>
+          </li>
+          <li class="direction__overlay">
+            <img
+              src="images/color_palette.jpg"
+              alt="color palette on the tablet"
+              width="370"
+              height="294"
+            />
+            <div class="direction__overlay-text">Rozwiązania graficzne</div>
+          </li>
+        </ul>
+      </section>
+      <div class="background-team">
+        <section class="team container">
+          <h2 class="team__title">Nasz zespół</h2>
+          <ul class="team__persons">
             <li>
-              <svg class="icon-1" width="270" height="120">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
-              <h3>LOREM IPSUM</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
-              </p>
-            </li>
-            <li>
-              <svg class="icon-1" width="270" height="120">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
-              <h3>LOREM IPSUM</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
-              </p>
-            </li>
-            <li>
-              <svg class="icon-1" width="270" height="120">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
-              <h3>LOREM IPSUM</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
-              </p>
-            </li>
-            <li>
-              <svg class="icon-1" width="270" height="120">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
-              <h3>LOREM IPSUM</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
-              </p>
-            </li>
-          </ul>
-          <div class="what-we-do-item">
-            <h2 class="what-we-do-text">Czym się zajmujemy</h2>
-            <ul class="what-we-do-img">
-              <li class="background-overlay">
-                <img
-                  src="images/notebook.jpg"
-                  alt="a notebook on the table"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">Aplikacje komputerowe</div>
-              </li>
-              <li class="background-overlay">
-                <img
-                  src="images/phone_notebook.jpg"
-                  alt="a notebook on the table and a phone in a hand"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">Aplikacje mobilne</div>
-              </li>
-              <li class="background-overlay">
-                <img
-                  src="images/color_palette.jpg"
-                  alt="color palette on the tablet"
-                  width="370"
-                  height="294"
-                />
-                <div class="overlay">Rozwiązania graficzne</div>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
-      <section class="team">
-        <div class="container">
-          <h2 class="team-text">Nasz zespół</h2>
-          <ul class="persons">
-            <li>
-              <div class="person">
+              <div class="team__person">
                 <img
                   src="images/product_designer.jpg"
                   alt="product designer"
                   height="260"
                   width="270"
                 />
-                <h3 class="name">John Doe</h3>
-                <p class="job">Product Designer</p>
-                <div class="links">
-                  <div class="link">
+                <h3 class="team__name">John Doe</h3>
+                <p class="team__job">Product Designer</p>
+                <div class="social-links">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -267,7 +265,7 @@
               </div>
             </li>
             <li>
-              <div class="person">
+              <div class="team__person">
                 <img
                   src="images/frontend_developer.jpg"
                   alt="Frontend Developer"
@@ -275,25 +273,25 @@
                   height="260"
                 />
 
-                <h3 class="name">John Doe</h3>
-                <p class="job">Frontend Developer</p>
-                <div class="links">
-                  <div class="link">
+                <h3 class="team__name">John Doe</h3>
+                <p class="team__job">Frontend Developer</p>
+                <div class="social-links">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -302,32 +300,32 @@
               </div>
             </li>
             <li>
-              <div class="person">
+              <div class="team__person">
                 <img
                   src="images/marketing.jpg"
                   alt="Marketing"
                   width="270"
                   height="260"
                 />
-                <h3 class="name">John Doe</h3>
-                <p class="job">Marketing</p>
-                <div class="links">
-                  <div class="link">
+                <h3 class="team__name">John Doe</h3>
+                <p class="team__job">Marketing</p>
+                <div class="social-links">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -336,32 +334,32 @@
               </div>
             </li>
             <li>
-              <div class="person">
+              <div class="team__person">
                 <img
                   src="images/ui_designer.jpg"
                   alt="UI Designer"
                   width="270"
                   height="260"
                 />
-                <h3 class="name">John Doe</h3>
-                <p class="job">UI Designer</p>
-                <div class="links">
-                  <div class="link">
+                <h3 class="team__name">John Doe</h3>
+                <p class="team__job">UI Designer</p>
+                <div class="social-links">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </div>
-                  <div class="link">
+                  <div class="social-links__item">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -370,45 +368,43 @@
               </div>
             </li>
           </ul>
-        </div>
-      </section>
-      <div class="container">
-        <section class="our-clients">
-          <h2>Nasi klienci</h2>
-          <div class="clients">
-            <div class="client">
-              <svg width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo-1"></use>
-              </svg>
-            </div>
-            <div class="client">
-              <svg width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo-2"></use>
-              </svg>
-            </div>
-            <div class="client">
-              <svg width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo-3"></use>
-              </svg>
-            </div>
-            <div class="client">
-              <svg width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo-4"></use>
-              </svg>
-            </div>
-            <div class="client">
-              <svg width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo-5"></use>
-              </svg>
-            </div>
-            <div class="client">
-              <svg width="106" height="60">
-                <use href="./images/icons.svg#icon-Logo-6"></use>
-              </svg>
-            </div>
-          </div>
         </section>
       </div>
+      <section class="our-clients container">
+        <h2>Nasi klienci</h2>
+        <div class="clients">
+          <div class="clients__item">
+            <svg width="106" height="60">
+              <use href="./images/icons.svg#icon-Logo-1"></use>
+            </svg>
+          </div>
+          <div class="clients__item">
+            <svg width="106" height="60">
+              <use href="./images/icons.svg#icon-Logo-2"></use>
+            </svg>
+          </div>
+          <div class="clients__item">
+            <svg width="106" height="60">
+              <use href="./images/icons.svg#icon-Logo-3"></use>
+            </svg>
+          </div>
+          <div class="clients__item">
+            <svg width="106" height="60">
+              <use href="./images/icons.svg#icon-Logo-4"></use>
+            </svg>
+          </div>
+          <div class="clients__item">
+            <svg width="106" height="60">
+              <use href="./images/icons.svg#icon-Logo-5"></use>
+            </svg>
+          </div>
+          <div class="clients__item">
+            <svg width="106" height="60">
+              <use href="./images/icons.svg#icon-Logo-6"></use>
+            </svg>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="container">
@@ -424,42 +420,42 @@
             </address>
           </div>
           <div class="social">
-            <p class="card">DOŁĄCZ DO NAS</p>
-            <div class="links">
-              <div class="social-link">
+            <p class="social__title">DOŁĄCZ DO NAS</p>
+            <div class="social-links">
+              <div class="social-links__item social-links__item--dark">
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </div>
-              <div class="social-link">
+              <div class="social-links__item social-links__item--dark">
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </div>
-              <div class="social-link">
+              <div class="social-links__item social-links__item--dark">
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </div>
-              <div class="social-link">
+              <div class="social-links__item social-links__item--dark">
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </div>
             </div>
           </div>
-          <div class="email-input">
-            <p class="email-input-text">ZAPISZ SIĘ DO NEWSLETTERA</p>
+          <div class="newsletter">
+            <p class="newsletter__text">ZAPISZ SIĘ DO NEWSLETTERA</p>
             <form name="signup-form">
               <input
-                class="subscribe"
+                class="newsletter__input"
                 type="email"
                 name="signupemail"
                 placeholder="E-mail"
               />
-              <button class="button-footer" type="submit">
+              <button class="button button-footer" type="submit">
                 Zapisz się
-                <svg class="icon-send" width="24" height="24">
+                <svg class="newsletter__button-send" width="24" height="24">
                   <use href="./images/icons.svg#icon-send"></use>
                 </svg>
               </button>
