header and footer portfolio

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       </div>
     </div>
     <header>
-      <div class="container">
-        <section class="header">
+      <div class="header-line">
+        <section class="header container">
           <div class="main-header">
             <a class="logo logo--header" href="./index.html"
               ><span class="logo__link-text">Web</span>Studio</a
